feat(backend): add control and system management endpoints
- Add ControlController with endpoints for fetching and managing NIST controls
- Add SystemController for system registration and management operations
- Create control.service.ts with business logic for control operations
- Create system.service.ts with business logic for system operations
- Add control.routes.ts and system.routes.ts for API routing
- Add NIST controls sample data in nist-controls-sample.ts
- Update auth.service.ts and jwt.utils.ts for enhanced authentication
- Update main.ts to register new control and system routes
- Update routes/index.ts to include new route handlers
- Simplify backend Dockerfile to copy entire workspace at once
- Remove "type": "module" from backend package.json for CommonJS compatibility
- Update shared package schema.ts with new data models
- Update frontend components (app-sidebar, controls-manager, system-registration-modal, system-detail, assessment-report-generator)
- Update Docker configuration for frontend (Dockerfile and nginx.conf)
- Update docker-compose.yml for improved service orchestration
- Update TypeScript configurations in backend and shared packages
- Implements core compliance control management and system registration features

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -5,19 +5,13 @@ WORKDIR /app
 # Install pnpm
 RUN npm install -g pnpm
 
-# Copy workspace files
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-COPY packages/shared/package.json ./packages/shared/
-COPY apps/backend/package.json ./apps/backend/
+# Copy all workspace files
+COPY . .
 
-# Install dependencies
-RUN pnpm install --frozen-lockfile
+# Install all dependencies from root
+RUN pnpm install
 
-# Copy source code
-COPY packages/shared ./packages/shared
-COPY apps/backend ./apps/backend
-
-# Build shared package
+# Build shared package first
 WORKDIR /app/packages/shared
 RUN pnpm build
 
