--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^20.16.11",
     "drizzle-kit": "^0.31.7",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "concurrently": "7.6.0"
   }
 }
