chore: configure environment variables and centralize API configuration
- Update backend CORS configuration to include production frontend URL
- Add filter to remove empty strings from allowed origins array
- Create centralized API configuration module (config/api.ts) for environment-aware URL resolution
- Add .env.example and .env.production files for frontend environment management
- Update frontend .env to use localhost for local development
- Replace hardcoded API URLs in user-management-tab.tsx with centralized API_URL constant
- Add Vite environment type definitions (vite-env.d.ts) for TypeScript support
- Update authApi.ts to import API_URL from centralized configuration
- Ensures consistent API endpoint resolution across development and production environments

--- a/frontend-repo/.env
+++ b/frontend-repo/.env
@@ -1,2 +1,2 @@
-# Backend API URL
-VITE_API_URL=https://ato-compliance-frontend-2lm9.vercel.app
+# Local Development API Configuration
+VITE_API_URL=http://localhost:3000
