--- a/backend-repo/.env.example
+++ b/backend-repo/.env.example
@@ -15,4 +15,4 @@ PORT=3000
 NODE_ENV=development
 
 # Frontend URL (for CORS in production)
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://ato-compliance-frontend-kd6j.vercel.app
