feat(backend): add NIST controls import and management scripts
- Add import-nist-controls.ts script to batch import NIST 800-53 controls from JSON data
- Add check-controls-status.ts script to verify controls database status and distribution
- Convert nist-controls-sample.ts to nist-controls-sample.json for data persistence
- Add getControlStats() endpoint to control.controller.ts for retrieving control statistics
- Add getControlStats() service method to control.service.ts for aggregating control data
- Add /stats route to control.routes.ts for accessing control statistics
- Add npm scripts for import-controls and check-controls commands in package.json
- Update controls.tsx frontend page to display control statistics
- Remove duplicate create-admin script entry from package.json
- Enables data-driven compliance tracking and control inventory management

--- a/backend-repo/package.json
+++ b/backend-repo/package.json
@@ -14,7 +14,8 @@
     "db:start": "docker-compose up -d",
     "db:stop": "docker-compose down",
     "create-admin": "tsx scripts/create-admin-user.ts",
-    "create-admin": "tsx scripts/create-admin-user.ts"
+    "import-controls": "tsx scripts/import-nist-controls.ts",
+    "check-controls": "tsx scripts/check-controls-status.ts"
   },
   "keywords": ["ato", "compliance", "nist", "stig"],
   "author": "",
