feat(backend): add STIG profile management and system assignment
- Add STIGController with endpoints for profile retrieval, rule access, and system assignment
- Create stig.service.ts with methods for querying STIG profiles, rules, and NIST control coverage
- Add stig.routes.ts with authenticated endpoints for STIG data access and system profile management
- Add npm scripts for STIG data import and testing (import-stig, test-stig, test-stig-service)
- Update system-registration-modal.tsx to integrate STIG profile selection in registration flow
- Register STIG routes in main router for API endpoint availability
- Enables systems to be assigned STIG profiles and provides comprehensive STIG data querying capabilities

--- a/backend-repo/package.json
+++ b/backend-repo/package.json
@@ -15,7 +15,10 @@
     "db:stop": "docker-compose down",
     "create-admin": "tsx scripts/create-admin-user.ts",
     "import-controls": "tsx scripts/import-nist-controls.ts",
-    "check-controls": "tsx scripts/check-controls-status.ts"
+    "check-controls": "tsx scripts/check-controls-status.ts",
+    "import-stig": "tsx scripts/import-stig-data.ts",
+    "test-stig": "tsx scripts/test-stig-data.ts",
+    "test-stig-service": "tsx scripts/test-stig-service.ts"
   },
   "keywords": ["ato", "compliance", "nist", "stig"],
   "author": "",
