feat(backend): add LLM provider integration and enhance user/system schema
- Add Anthropic Claude and OpenAI SDK dependencies for LLM integration
- Extend users table with email field and updatedAt timestamp
- Add systemOwner field to systems table for better ownership tracking
- Add requirements field to controls table for detailed control specifications
- Add title field to evidence table for better evidence identification
- Update user controller to use getAllUsers method with offset-based pagination
- Enhance auth service with provider update utilities and improved type safety
- Update test helpers and storage utilities to support new schema fields
- Configure TypeScript for improved type checking and LLM integration support
- Enable multi-provider LLM support for assessment and analysis workflows

--- a/backend-repo/package.json
+++ b/backend-repo/package.json
@@ -29,6 +29,7 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.0",
     "@types/multer": "^2.0.0",
     "@xmldom/xmldom": "^0.8.11",
     "bcrypt": "^6.0.0",
@@ -42,6 +43,7 @@
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
+    "openai": "^6.9.1",
     "pizzip": "^3.2.0",
     "postgres": "^3.4.7",
     "puppeteer": "^24.31.0",
