--- a/backend-repo/package.json
+++ b/backend-repo/package.json
@@ -42,7 +42,9 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.11.0",
+    "marked": "^17.0.1",
     "multer": "^2.0.2",
+    "node-html-parser": "^7.0.1",
     "openai": "^6.9.1",
     "pizzip": "^3.2.0",
     "postgres": "^3.4.7",
