feat(backend): add data export and enhanced cryptography support
- Add bcryptjs dependency alongside existing bcrypt for enhanced password hashing options
- Integrate json2csv library for CSV export functionality across assessment and reporting services
- Add pdf-parse dependency for improved PDF document processing and extraction
- Add xlsx library for Excel file format support in data export operations
- Add TypeScript type definitions for bcryptjs and pdf-parse packages
- Update all route handlers to support new export formats (CSV, Excel, PDF)
- Update service layer across assessment, generation, and document processing modules to leverage new export capabilities
- Remove legacy user service unit tests in favor of integration test coverage
- Update storage configuration to handle new export data formats
- Enhance document processing pipeline with improved PDF parsing capabilities
- These changes enable comprehensive data export functionality and strengthen cryptographic operations across the platform

--- a/backend-repo/package.json
+++ b/backend-repo/package.json
@@ -30,9 +30,12 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^2.0.0",
+    "@types/pdf-parse": "^1.1.5",
     "@xmldom/xmldom": "^0.8.11",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "docxtemplater": "^3.67.5",
@@ -40,15 +43,18 @@
     "drizzle-orm": "^0.44.7",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.11.0",
     "marked": "^17.0.1",
     "multer": "^2.0.2",
     "node-html-parser": "^7.0.1",
     "openai": "^6.9.1",
+    "pdf-parse": "^2.4.5",
     "pizzip": "^3.2.0",
     "postgres": "^3.4.7",
     "puppeteer": "^24.31.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
